--- a/SpringSaleAppDemo/pom.xml
+++ b/SpringSaleAppDemo/pom.xml
@@ -28,17 +28,9 @@
         </dependency>
 
         <!-- Nay là JSTL-->
-        <dependency>
-            <groupId>jakarta.servlet.jsp.jstl</groupId>
-            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-            <version>3.0.2</version>
-        </dependency>
+
         <!--THÊM NÀY ĐỂ DÙNG TAG THEO JARKARTA-->
-        <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-            <version>3.0.1</version>
-        </dependency>
+
         
         <!-- Jakarta Servlet -->
         <dependency>
@@ -77,6 +69,13 @@
             <artifactId>spring-orm</artifactId>
             <version>6.2.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>3.4.3</version>
+        </dependency>
+
         
 
 
