--- a/SpringSaleAppDemo/pom.xml
+++ b/SpringSaleAppDemo/pom.xml
@@ -76,7 +76,13 @@
             <version>3.4.3</version>
         </dependency>
 
-        
+        <!-- Làm việc với layout của thymeleaf -->
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
 
 
     </dependencies>
