--- a/SpringSaleAppDemo/pom.xml
+++ b/SpringSaleAppDemo/pom.xml
@@ -84,6 +84,20 @@
         </dependency>
 
 
+        <!--Spring security-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>6.4.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>6.4.3</version>
+        </dependency>
+
 
     </dependencies>
     
