--- a/SpringSaleAppDemo/pom.xml
+++ b/SpringSaleAppDemo/pom.xml
@@ -100,7 +100,7 @@
         
         <!--làm việc với upload file-->
         
-        <dependency>
+<!--        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.4</version>
@@ -109,7 +109,7 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
-        </dependency>
+        </dependency>-->
 
         <!--Clouddinary-->
         <dependency>
