--- a/SpringSaleAppDemo/pom.xml
+++ b/SpringSaleAppDemo/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>6.2.3</version>
+            <version>6.2.4</version>
         </dependency>
 
         <!-- Nay là JSTL-->
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.1.0</version>
+            <version>6.1.0-M1</version> 
             <scope>provided</scope>
         </dependency>
         
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>6.6.7.Final</version>
+            <version>6.6.9.Final</version>
         </dependency>
         <!--Lombook , MYSQL-CONNECTER-->
         <dependency>
@@ -67,13 +67,18 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>6.2.3</version>
+            <version>6.2.4</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf  đã giảm phiên bản để phù hợp với thymeleaf spring6 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>3.4.3</version>
+            <version>3.3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring6</artifactId>
+            <version>3.1.2.RELEASE</version>
         </dependency>
 
         <!-- Làm việc với layout của thymeleaf -->
@@ -98,18 +103,16 @@
             <version>6.4.3</version>
         </dependency>
         
-        <!--làm việc với upload file-->
         
-<!--        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.4</version>
+        
+                <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.3</version>
         </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.6</version>
-        </dependency>-->
+        
+        
+
 
         <!--Clouddinary-->
         <dependency>
@@ -122,7 +125,12 @@
             <artifactId>cloudinary-taglib</artifactId>
             <version>1.29.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+            <version>3.1.3.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
