--- a/SpringSaleAppDemo/pom.xml
+++ b/SpringSaleAppDemo/pom.xml
@@ -131,6 +131,12 @@
             <version>3.1.3.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.2.4</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
